RESOLVED FIXED105358
Popupmenu on Windows should fade in instead of sliding in
https://bugs.webkit.org/show_bug.cgi?id=105358
Summary Popupmenu on Windows should fade in instead of sliding in
Roger Fong
Reported 2012-12-18 15:55:16 PST
Most Windows applications use a dissolve when showing popup menus, we should match that.
Attachments
patch (1.76 KB, patch)
2012-12-18 16:11 PST, Roger Fong
thorton: review+
webkit.review.bot: commit-queue-
Roger Fong
Comment 1 2012-12-18 16:11:16 PST
Roger Fong
Comment 2 2012-12-18 16:12:03 PST
WebKit Review Bot
Comment 3 2012-12-18 18:19:40 PST
Comment on attachment 180049 [details] patch Attachment 180049 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15409407 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
Tim Horton
Comment 4 2012-12-19 11:17:10 PST
Comment on attachment 180049 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=180049&action=review > Source/WebCore/platform/win/PopupMenuWin.cpp:172 > + ::AnimateWindow(m_popup, defaultAnimationDuration, AW_BLEND); Does this exist on XP? Is it the expected behavior there?
Roger Fong
Comment 5 2012-12-19 11:20:25 PST
It does unless we have WS_EX_COMPOSITED enabled as well, which we don't. According to the radar this is the behavior we want.
Roger Fong
Comment 6 2012-12-19 11:34:41 PST
Note You need to log in before you can comment on or make changes to this bug.