Popup menu on Windows should fade in instead of sliding in. https://bugs.webkit.org/show_bug.cgi?id=105358 <rdar://problem/7611211>

Reviewed by Timothy Horton.

Changing popup menu display animation to match what most other Windows applications do.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::show):


Canonical link: https://commits.webkit.org/123681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138182 268f45cc-cd09-0410-ab3c-d52691b4dbfc